--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jwt-decode": "^2.2.0",
     "next": "^9.0.8",
     "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "react-dom": "^16.10.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.8.1",
@@ -32,6 +33,7 @@
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/styled-components": "^4.1.19",
     "dotenv": "^8.1.0",
     "typescript": "3.6.3"
   },
