--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
     "next": "^9.0.8",
+    "next-images": "^1.2.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-svg": "^10.0.22",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "@types/styled-components": "^4.1.19",
+    "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.1.0",
     "typescript": "3.6.3"
   },
