--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
     "@apollo/react-ssr": "^3.1.2",
+    "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-token-refresh": "^0.2.6",
+    "bootstrap": "^4.3.1",
     "cookie": "^0.4.0",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
