--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/react-hooks": "^3.1.2",
     "@apollo/react-ssr": "^3.1.2",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-token-refresh": "^0.2.6",
@@ -22,6 +23,7 @@
     "jwt-decode": "^2.2.0",
     "next": "^9.0.8",
     "next-images": "^1.2.0",
+    "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-svg": "^10.0.22",
