--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "jwt-decode": "^2.2.0",
     "next": "^9.0.8",
     "next-images": "^1.2.0",
+    "next-redux-saga": "^4.0.2",
+    "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-svg": "^10.0.22",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
@@ -36,12 +40,15 @@
     "@graphql-codegen/typescript-react-apollo": "1.8.1",
     "@types/cookie": "^0.3.3",
     "@types/jwt-decode": "^2.2.1",
+    "@types/next-redux-saga": "^3.0.1",
     "@types/node": "^12.7.8",
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.4",
     "@types/styled-components": "^4.1.19",
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.1.0",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "3.6.3"
   },
   "license": "ISC"
