--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
+    "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.1.19",
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.1.0",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "typescript": "3.6.3"
   },
   "license": "ISC"
