--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/react-components": "^3.1.2",
+    "@apollo/react-hoc": "^3.1.2",
     "@apollo/react-hooks": "^3.1.2",
     "@apollo/react-ssr": "^3.1.2",
     "@zeit/next-css": "^1.0.1",
@@ -50,7 +52,6 @@
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.1.0",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "typescript": "3.6.3"
   },
   "license": "ISC"
