--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-redux-wrapper": "^4.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
+    "react-apollo": "^3.1.2",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-svg": "^10.0.22",
