--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-svg": "^10.0.22",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
