--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-svg": "^10.0.22",
+    "react-toastify": "^5.4.0",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
