--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-link-token-refresh": "^0.2.6",
     "bootstrap": "^4.3.1",
     "cookie": "^0.4.0",
+    "dayjs": "^1.8.16",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
