--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.3.1",
     "cookie": "^0.4.0",
     "dayjs": "^1.8.16",
+    "formik": "^2.0.3",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
