--- a/codegen.yml
+++ b/codegen.yml
@@ -1,12 +1,14 @@
 overwrite: true
-schema: 'http://localhost:4000/graphql'
-documents: 'graphql/*.graphql'
+schema: "http://localhost:4000/graphql"
+documents:
+  - "graphql/Query/*.graphql"
+  - "graphql/Mutation/*/*.graphql"
 generates:
   generated/graphql.tsx:
     plugins:
-      - 'typescript'
-      - 'typescript-operations'
-      - 'typescript-react-apollo'
+      - "typescript"
+      - "typescript-operations"
+      - "typescript-react-apollo"
     config:
       withHOC: false
       withComponent: false
